[package]
name = "desmonic2"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.23.1"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
clap-cargo = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
